[package]
name = "primitive_promotion"
version = "0.1.1"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.56.1" # https://github.com/foresterre/cargo-msrv
description = "Primitive promotions for primitive numeric types: u16 for u8, i32 for i16, f64 for f32, etc"
documentation = "https://docs.rs/primivite_promotion"
readme = "README.md"
repository = "https://github.com/JohnScience/primivite_promotion"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["primitive", "promotion", "extension"]
categories = ["no-std"]
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
include = [
    "/Cargo.toml",
    "/LICENSE_APACHE",
    "/LICENSE_MIT",
    "/README.md",
    "/src/lib.rs",
    "/tests/**",
]
# publish | not needed
# metadata | not needed
# default-run | not needed
autobins = false
autoexamples = false
autotests = false
autobenches = false
# resolver | not needed

[dependencies]
